Applied OCP principles, changing Problem to abstract class. Changed some Board functionality, WIP for tests